--- a/medcaller/package.json
+++ b/medcaller/package.json
@@ -8,12 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
+    "next": "15.5.4",
+    "puppeteer": "^24.24.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
