--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,61 @@
+# --------------------
+# Node / pnpm
+# --------------------
 node_modules/
+.pnpm-store/
+.npm/
+.yarn/
+
+# --------------------
+# Builds / caches
+# --------------------
+.next/
+dist/
+build/
+out/
+coverage/
+
+# --------------------
+# Environment variables
+# --------------------
+.env
+.env.local
+.env.*.local
+
+# --------------------
+# Logs
+# --------------------
+logs/
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# --------------------
+# OS / editor junk
+# --------------------
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+
+# --------------------
+# Docker / local DB state
+# --------------------
+.db.store/
+docker-data/
+postgres-data/
+pgdata/
+
+# --------------------
+# AWS / secrets
+# --------------------
+.aws/
+*.pem
+
+# --------------------
+# Temporary files
+# --------------------
+tmp/
+temp/
